@@ -17,18 +17,18 @@ package io.airlift.http.client;
 
 import com.google.common.collect.ImmutableListMultimap;
 import com.google.common.collect.ListMultimap;
-import com.google.common.io.ByteStreams;
 import com.google.common.net.MediaType;
 import io.airlift.http.client.StringResponseHandler.StringResponse;
 
 import javax.annotation.Nullable;
 
-import java.io.IOException;
-import java.io.UncheckedIOException;
+import java.nio.charset.Charset;
 import java.util.List;
+import java.util.Optional;
 
 import static com.google.common.net.HttpHeaders.CONTENT_TYPE;
 import static io.airlift.http.client.ResponseHandlerUtils.propagate;
+import static io.airlift.http.client.ResponseHandlerUtils.readResponseBytes;
 import static java.nio.charset.StandardCharsets.UTF_8;
 
 public class StringResponseHandler
@@ -54,25 +54,14 @@ public class StringResponseHandler
     @Override
     public StringResponse handle(Request request, Response response)
     {
-        try {
-            String contentType = response.getHeader(CONTENT_TYPE);
+        byte[] bytes = readResponseBytes(request, response);
 
-            if (contentType != null) {
-                MediaType mediaType = MediaType.parse(contentType);
-                return new StringResponse(
-                        response.getStatusCode(),
-                        response.getHeaders(),
-                        new String(ByteStreams.toByteArray(response.getInputStream()), mediaType.charset().or(UTF_8)));
-            }
+        Charset charset = Optional.ofNullable(response.getHeader(CONTENT_TYPE))
+                .map(MediaType::parse)
+                .flatMap(mediaType -> mediaType.charset().toJavaUtil())
+                .orElse(UTF_8);
 
-            return new StringResponse(
-                    response.getStatusCode(),
-                    response.getHeaders(),
-                    new String(ByteStreams.toByteArray(response.getInputStream()), UTF_8));
-        }
-        catch (IOException e) {
-            throw new UncheckedIOException(e);
-        }
+        return new StringResponse(response.getStatusCode(), response.getHeaders(), new String(bytes, charset));
     }
 
     public static class StringResponse
